WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178920
[WinCairo] Fix build after WebCore moves to unified source.
https://bugs.webkit.org/show_bug.cgi?id=178920
Summary
[WinCairo] Fix build after WebCore moves to unified source.
Basuke Suzuki
Reported
2017-10-26 20:31:55 PDT
Unified source includes the files DNSResolveQueue.h|cpp which is not currently used in Curl port. That prevents the WinCairo build. The file is for dns prefetch. That is not implemented in curl right now so that DNSResolveQueue class was not included. We plan to implement that soon but not now. We decided not removing it from the build, but add empty implementation for preparation of the future at this moment.
Attachments
patch
(1.36 KB, patch)
2017-10-26 20:50 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2017-10-26 20:50:52 PDT
Created
attachment 325112
[details]
patch
WebKit Commit Bot
Comment 2
2017-10-26 23:18:49 PDT
Comment on
attachment 325112
[details]
patch Clearing flags on attachment: 325112 Committed
r224086
: <
https://trac.webkit.org/changeset/224086
>
WebKit Commit Bot
Comment 3
2017-10-26 23:18:50 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-15 12:43:21 PST
<
rdar://problem/35568017
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug