[WinCairo] Fix build after WebCore moves to unified source. https://bugs.webkit.org/show_bug.cgi?id=178920

Added empty implementations to fix link error.

Patch by Basuke Suzuki <Basuke.Suzuki@sony.com> on 2017-10-26
Reviewed by Ryosuke Niwa.

* platform/network/curl/DNSCurl.cpp:
(WebCore::DNSResolveQueue::updateIsUsingProxy):
(WebCore::DNSResolveQueue::platformResolve):

Canonical link: https://commits.webkit.org/195074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224086 268f45cc-cd09-0410-ab3c-d52691b4dbfc